--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "js-cookie": "^2.2.0",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.9.2",
     "normalize.css": "^8.0.0",
@@ -60,8 +61,10 @@
     "sass": "^1.9.0",
     "sass-loader": "^7.0.3",
     "sass-resources-loader": "^1.3.3",
+    "screenfull": "^3.3.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "svg-sprite-loader": "^3.8.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
